--- a/src/Core/Application/Application.csproj
+++ b/src/Core/Application/Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
