--- a/src/Core/Application/Application.csproj
+++ b/src/Core/Application/Application.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Renci.SshNet.Async" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
