--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="BunnyCDN.Net.Storage" Version="1.0.4" />
       <PackageReference Include="Hangfire" Version="1.7.34" />
       <PackageReference Include="Hangfire.Console" Version="1.4.2" />
       <PackageReference Include="Hangfire.Console.Extensions" Version="1.0.5" />
